--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -58,9 +58,12 @@ html {
   }
 }
 
+/* 
+ * @corbs inject custom background and foreground colors here
+ */
 body {
-  color: #515151;
-  background-color: #fff;
+  color: #42E4CF;
+  background-color: #00234F;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
@@ -76,7 +79,8 @@ a strong {
 /* `:focus` is linked to `:hover` for basic accessibility */
 a:hover,
 a:focus {
-  text-decoration: underline;
+  /* text-decoration: underline; */
+  color: #C0D3FC;
 }
 
 /* Headings */
@@ -110,7 +114,7 @@ p {
 }
 
 strong {
-  color: #303030;
+  color: #2CBDFC;
 }
 
 
@@ -132,19 +136,19 @@ hr {
   position: relative;
   margin: 1.5rem 0;
   border: 0;
-  border-top: 1px solid #eee;
-  border-bottom: 1px solid #fff;
+  border-top: 1px solid #42E4CF;
+  border-bottom: 1px solid #42E4CF;
 }
 
 abbr {
   font-size: 85%;
   font-weight: bold;
-  color: #555;
+  color: #F69851;
   text-transform: uppercase;
 }
 abbr[title] {
   cursor: help;
-  border-bottom: 1px dotted #e5e5e5;
+  border-bottom: 1px dotted #F69851;
 }
 
 /* Code */
@@ -214,7 +218,7 @@ pre code {
 blockquote {
   padding: .5rem 1rem;
   margin: .8rem 0;
-  color: #7a7a7a;
+  color: #C0D3FC;
   border-left: .25rem solid #e5e5e5;
 }
 blockquote p:last-child {
@@ -238,19 +242,19 @@ img {
 table {
   margin-bottom: 1rem;
   width: 100%;
-  border: 1px solid #e5e5e5;
+  border: 1px solid #42E4CF;
   border-collapse: collapse;
 }
 td,
 th {
   padding: .25rem .5rem;
-  border: 1px solid #e5e5e5;
+  border: 1px solid #42E4CF;
 }
 tbody tr:nth-child(odd) td,
 tbody tr:nth-child(odd) th {
-  background-color: #f9f9f9;
+  background-color: #42E4CF;
+  color: #00234F;
 }
-
 
 /*
  * Custom type
@@ -390,7 +394,7 @@ tbody tr:nth-child(odd) th {
   margin-left: -1rem;
   margin-right: -1rem;
   font-family: "PT Sans", Helvetica, Arial, sans-serif;
-  color: #ccc;
+  color: #42E4CF;
   text-align: center;
 }
 
@@ -398,7 +402,7 @@ tbody tr:nth-child(odd) th {
 .pagination-item {
   display: block;
   padding: 1rem;
-  border: 1px solid #eee;
+  border: 1px solid #42E4CF;
 }
 .pagination-item:first-child {
   margin-bottom: -1px;
@@ -406,7 +410,7 @@ tbody tr:nth-child(odd) th {
 
 /* Only provide a hover state for linked pagination items */
 a.pagination-item:hover {
-  background-color: #f5f5f5;
+  background-color: #42E4CF;
 }
 
 @media (min-width: 30em) {
